# axum-websockify

./: Cargo.toml  Readme.md  noVnc.tar
noVnc/include/web-socket-js/: swfobject.js
noVnc/utils/: launch.sh
src/: agent.rs  config.rs  main.rs  server.rs
